@@ -238,8 +238,6 @@ static const int _cipher_priority_performance_default[] = {
 	GNUTLS_CIPHER_CHACHA20_POLY1305,
 	GNUTLS_CIPHER_AES_128_CCM,
 	GNUTLS_CIPHER_AES_256_CCM,
-	GNUTLS_CIPHER_CAMELLIA_128_GCM,
-	GNUTLS_CIPHER_CAMELLIA_256_GCM,
 	GNUTLS_CIPHER_AES_128_CBC,
 	GNUTLS_CIPHER_AES_256_CBC,
 	GNUTLS_CIPHER_CAMELLIA_128_CBC,
@@ -254,8 +252,6 @@ static const int _cipher_priority_performance_no_aesni[] = {
 	GNUTLS_CIPHER_AES_256_GCM,
 	GNUTLS_CIPHER_AES_128_CCM,
 	GNUTLS_CIPHER_AES_256_CCM,
-	GNUTLS_CIPHER_CAMELLIA_128_GCM,
-	GNUTLS_CIPHER_CAMELLIA_256_GCM,
 	GNUTLS_CIPHER_AES_128_CBC,
 	GNUTLS_CIPHER_AES_256_CBC,
 	GNUTLS_CIPHER_CAMELLIA_128_CBC,
@@ -271,7 +267,6 @@ static const int _cipher_priority_performance_no_aesni[] = {
  */
 static const int _cipher_priority_normal_default[] = {
 	GNUTLS_CIPHER_AES_256_GCM,
-	GNUTLS_CIPHER_CAMELLIA_256_GCM,
 	GNUTLS_CIPHER_CHACHA20_POLY1305,
 	GNUTLS_CIPHER_AES_256_CCM,
 
@@ -279,7 +274,6 @@ static const int _cipher_priority_normal_default[] = {
 	GNUTLS_CIPHER_CAMELLIA_256_CBC,
 
 	GNUTLS_CIPHER_AES_128_GCM,
-	GNUTLS_CIPHER_CAMELLIA_128_GCM,
 	GNUTLS_CIPHER_AES_128_CCM,
 
 	GNUTLS_CIPHER_AES_128_CBC,
@@ -330,14 +324,12 @@ static const int* cipher_priority_suiteb192 = _cipher_priority_suiteb192;
 
 static const int _cipher_priority_secure128[] = {
 	GNUTLS_CIPHER_AES_256_GCM,
-	GNUTLS_CIPHER_CAMELLIA_256_GCM,
 	GNUTLS_CIPHER_CHACHA20_POLY1305,
 	GNUTLS_CIPHER_AES_256_CBC,
 	GNUTLS_CIPHER_CAMELLIA_256_CBC,
 	GNUTLS_CIPHER_AES_256_CCM,
 
 	GNUTLS_CIPHER_AES_128_GCM,
-	GNUTLS_CIPHER_CAMELLIA_128_GCM,
 	GNUTLS_CIPHER_AES_128_CBC,
 	GNUTLS_CIPHER_CAMELLIA_128_CBC,
 	GNUTLS_CIPHER_AES_128_CCM,
@@ -348,7 +340,6 @@ static const int *cipher_priority_secure128 = _cipher_priority_secure128;
 
 static const int _cipher_priority_secure192[] = {
 	GNUTLS_CIPHER_AES_256_GCM,
-	GNUTLS_CIPHER_CAMELLIA_256_GCM,
 	GNUTLS_CIPHER_CHACHA20_POLY1305,
 	GNUTLS_CIPHER_AES_256_CBC,
 	GNUTLS_CIPHER_CAMELLIA_256_CBC,
